--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=employee_directory
 spring.datasource.username=sa
 spring.datasource.password=sapassword
-spring.jpa.hibernate.ddl-auto=create
-spring.data.rest.base-path=/api
+spring.jpa.hibernate.ddl-auto=update
